--- a/index.html
+++ b/index.html
@@ -6,10 +6,144 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive-Football</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Clubs</a></li>
+                <li><a href="#">World Cup 2023</a></li>
+                <li><a href="#">Upcoming Matches</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <button class="button"><i class="fal fa-sign-in"></i>Login</button></a>
+    </header>
+    <main>
+        <section>
+            <div class="intro">
+                <div class="intro-1">
+                    <h1>Conmebol<br>
+                        Copa America<br>
+                        2021</h1><br>
+                    <button class="button">Watch Live <i class="far fa-arrow-right"></i> </button>
+                </div>
+                <div>
+                    <img class="banner" src="images/banner.png" alt="This is a picture of banner">
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
 
+                    <h3 class="players-name">
+                        Neymar Jr
+                    </h3>
+                    <p class="players-country">He is the player of Brazil. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+
+                    <h3 class="players-name">
+                        Lionel Messi
+                    </h3>
+                    <p class="players-country">He is the player of Argentina. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+
+                    <h3 class="players-name">
+                        Cristiano Ronaldo
+                    </h3>
+                    <p class="players-country">He is the player of Portugal. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+
+                    <h3 class="players-name">
+                        Paulo Dybala
+                    </h3>
+                    <p class="players-country">He is the player of Argentina. Carried number 21 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+
+                    <h3 class="players-name">
+                        Mesut Ozil
+                    </h3>
+                    <p class="players-country">He is the player of German.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+
+                    <h3 class="players-name">
+                        Mauro Icardi
+                    </h3>
+                    <p class="players-country">He is the player of Argentina.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+
+                    <h3 class="players-name">
+                        Di Maria
+                    </h3>
+                    <p class="players-country">He is the player of Argentina. Carried number 11 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+
+                    <h3 class="players-name">
+                        Kylian Mbappé
+                    </h3>
+                    <p class="players-country">He is the player of France. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+
+                    <h3 class="players-name">
+                        Mohamed Salah
+                    </h3>
+                    <p class="players-country">He is the player of Egypt. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+
+                    <h3 class="players-name">
+                        Harry Kane
+                    </h3>
+                    <p class="players-country">He is the player of England. Carried number 10 jursey.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+
+                    <h3 class="players-name">
+                        Philippe Coutinho
+                    </h3>
+                    <p class="players-country">He is the player of Brazil.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+
+                    <h3 class="players-name">
+                        Kevin De Bruyne
+                    </h3>
+                    <p class="players-country">He is the player of Belgium. Carried number 10 jursey.</p>
+                </div>
+
+
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
