--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/01dc953a3a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <button class="button"><i class="fal fa-sign-in"></i>Login</button></a>
+        <button class="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
     </header>
     <main>
         <section>
@@ -33,7 +33,7 @@
                     <h1>Conmebol<br>
                         Copa America<br>
                         2021</h1><br>
-                    <button class="button">Watch Live <i class="far fa-arrow-right"></i> </button>
+                    <button class="button">Watch Live <i class="fas fa-arrow-right"></i> </button>
                 </div>
                 <div>
                     <img class="banner" src="images/banner.png" alt="This is a picture of banner">
@@ -142,8 +142,59 @@
 
             </div>
         </section>
+        <section>
+            <div class="highlights">
+                <div class="copa-america">
+                    <h1>All Highlights<br>
+                        Copa America 2021</h1>
+                    <p>From here you can find highlights of all the matches of Copa America 2021.</p><br>
+                    <br>
+                    <button class="button">Watch Now <i class="fas fa-arrow-right"></i> </button>
+                </div>
 
+                <div>
+                    <img src="images/match.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+
+            <div class="sponsers">
+                <h1>Sponsers</h1>
+                <div class="mastercard">
+                    <a href="https://www.mastercard.us/en-us.html" target="_blank">
+                        <img src="images/Sponsers/Mastercard_logo.jpg" alt="Logo of MasterCard">
+                    </a>
+                </div>
+                <div class="betssongroup">
+                    <a href="https://www.betssongroup.com/" target="_blank">
+                        <img src="images/Sponsers/betsson_group.png" alt="Logo of BetssonGroup">
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="logo">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <br>
+        <div class="social-media-icon">
+            <a class="social-media" href="https://www.facebook.com/" target="_blank"> <i
+                    class="fab fa-facebook-square"></i></a>
+            <a class="social-media" href="https://www.instagram.com/" target="_blank">
+                <i class="fab fa-instagram-square"></i>
+            </a>
+            <a class="social-media" href="https://www.youtube.com/" target="_blank">
+                <i class="fab fa-youtube-square"></i>
+            </a>
+            <a class="social-media" href="https://www.twitter.com/" target="_blank">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+        </div>
+        Copyright &copy;2022 Football
+    </footer>
 </body>
 
 </html>
